<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".fragments.ProfileFragment"
                                             android:background="?android:windowBackground">
    <ImageView
            android:layout_width="160dp"
            android:layout_height="250dp"
            android:id="@+id/imageView4"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/profiel_textTop"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="75dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="75dp"
            app:layout_constraintHorizontal_bias="0.495" android:src="@mipmap/profile_avatar"
            android:contentDescription="@string/profielafbeelding"/>
    <TextView
            android:text="@string/profiel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/profiel_textTop" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            android:textSize="24sp" android:textAlignment="center" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/profiel_naam" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:hint="@string/naam" android:textSize="24sp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/profiel_email"
            app:layout_constraintTop_toBottomOf="@+id/profiel_naam" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" android:layout_marginTop="24dp" android:hint="@string/email"
            android:textSize="24sp" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/uitloggen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profiel_btn_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/profiel_email" app:layout_constraintHorizontal_bias="0.498"
    />
    <TextView
            android:text="@string/naam_dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/profiel_naam"
            android:layout_marginEnd="8dp" android:textSize="24sp"/>
    <TextView
            android:text="@string/email_dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/profiel_email"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.339" android:textSize="24sp"/>
</android.support.constraint.ConstraintLayout>