<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".fragments.RecipeDetailFragment"
                                             android:background="?android:windowBackground">


    <TextView
            android:text="@string/recept_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_detail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_detail_title" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/recipe_detail" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/producten_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="100dp" app:layout_constraintTop_toBottomOf="@+id/recipe_detail"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/allergieen_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="148dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/soort_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:textSize="18sp" android:layout_marginTop="140dp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_detail_soort" app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.508" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginTop="140dp"/>

    <android.support.v4.widget.NestedScrollView android:layout_width="wrap_content"
                                                android:layout_height="0dp" android:layout_marginEnd="8dp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintStart_toEndOf="@+id/textView8"
                                                android:layout_marginStart="8dp"
                                                app:layout_constraintTop_toBottomOf="@+id/recipe_detail_title"
                                                android:id="@+id/prod_scroll" android:layout_marginTop="90dp"
                                                app:layout_constraintHorizontal_bias="0.406"
                                                android:layout_marginBottom="16dp"
                                                app:layout_constraintBottom_toTopOf="@+id/textView9"
                                                app:layout_constraintVertical_bias="1.0">

        <TableLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/recipe_detail_title" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                android:id="@+id/recipe_detail_prod_layout">
        </TableLayout>
    </android.support.v4.widget.NestedScrollView>


    <android.support.v4.widget.NestedScrollView android:layout_width="wrap_content"
                                                android:layout_height="0dp"
                                                android:layout_marginEnd="8dp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:id="@+id/aller_scroll"
                                                app:layout_constraintBottom_toTopOf="@+id/recipe_detail_soort"
                                                app:layout_constraintTop_toBottomOf="@+id/prod_scroll"
                                                app:layout_constraintStart_toEndOf="@+id/textView9"
                                                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                                                app:layout_constraintHorizontal_bias="0.4"
                                                app:layout_constraintVertical_bias="0.0">

        <TableLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/recipe_detail_prod_layout"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/recipe_detail_aller_layout">
        </TableLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>